Adding a message count notifier browseraction

--- a/src/options.html
+++ b/src/options.html
@@ -20,6 +20,10 @@
 			<input type="checkbox" id="hotkeys" name="hotkeys" />
 			<label for="hotkeys" title="Use this if you want to enable hotkey navigation.">Enable hotkeys</label>
 		</div>
+		<div>
+			<input type="text" id="notifierdelay" name="notifierdelay" />
+			<lable for="notifierdelay" title="Number of minutes the notifier waits to check.">Notifier update check in minutes</label>
+		</div>
 		<br />
 		<div>
 			<h3>Journal/submission highlighting</h3>
