Update to ES6 and add Firefox support

--- a/src/tabdelay.html
+++ b/src/tabdelay.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<!-- Open in tabs delay -->
 	<head>
+		<meta charset="utf-8">
 		<title>FurAffinity Redirecting</title>
-		<script type="text/javascript" src="js/lib/jquery-1.8.1.min.js"></script>
-		<script type="text/javascript" src="js/src/tabdelay.js"></script>
+		<script type="text/javascript" src="jquery.min.js"></script>
+		<script type="text/javascript" src="tabdelay.js"></script>
 		<link rel="icon" href="icon32.png" style="display: none;" />
 	</head>
 	<body>
