--- a/src/options.html
+++ b/src/options.html
@@ -1,9 +1,11 @@
+<!DOCTYPE html>
 <html>
 	<!-- FAExtender settings -->
 	<head>
+		<meta charset="utf-8">
 		<title>FurAffinity Extender Settings</title>
-		<script type="text/javascript" src="js/lib/jquery-1.8.1.min.js"></script>
-		<script type="text/javascript" src="js/src/options.js"></script>
+		<script type="text/javascript" src="jquery.min.js"></script>
+		<script type="text/javascript" src="options.js"></script>
 		<link rel="shortcut icon" href="icon32.png" />
 	</head>
 	<body>
