Add download support

--- a/src/options.html
+++ b/src/options.html
@@ -24,6 +24,18 @@
 		</div>
 		<br />
 		<div>
+			<h3>Save in folder settings</h3>
+			<div>
+				<label for="savefolder" title="Subdirectory inside Downloads to save to.">Subdirectory:</label>
+				<input type="text" id="savefolder" name="savefolder" />                
+			</div>
+			<div>
+				<input type="checkbox" id="saveartistsubfolder" name="saveartistsubfolder" />
+				<label for="saveartistsubfolder" title="Use this to save art for each artist into individual subdirectories.">Create artist subdirectories</label>
+			</div>
+		</div>
+		<br />
+		<div>
 			<h3>Journal/submission highlighting</h3>
 			<table id="highlight_table" border="1">
 				<thead>
