Add text to clarify that download path is a subdir

--- a/src/options.html
+++ b/src/options.html
@@ -26,7 +26,7 @@
 		<div>
 			<h3>Save in folder settings</h3>
 			<div>
-				<label for="savefolder" title="Subdirectory inside Downloads to save to.">Subdirectory:</label>
+				<label for="savefolder" title="Subdirectory inside the downloads folder to save to into.">Optional subdirectory inside downloads folder</label>
 				<input type="text" id="savefolder" name="savefolder" />                
 			</div>
 			<div>
