Migrate extension to Typescript and Webpack
We were kind of using Webpack before, but now removing Gulp and moving over to a fully-inclusive Webpack build

--- a/src/options.html
+++ b/src/options.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>FurAffinity Extender Settings</title>
-		<script type="text/javascript" src="jquery.min.js"></script>
-		<script type="text/javascript" src="options.js"></script>
+		<script type="text/javascript" src="options.bundle.js"></script>
+		<script type="text/javascript" src="vendor.bundle.js"></script>
 		<link rel="shortcut icon" href="icon32.png" />
 	</head>
 	<body>
