--- a/src/tabdelay.html
+++ b/src/tabdelay.html
@@ -4,8 +4,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>FurAffinity Redirecting</title>
-		<script type="text/javascript" src="jquery.min.js"></script>
-		<script type="text/javascript" src="tabdelay.js"></script>
+		<script type="text/javascript" src="tabdelay.bundle.js"></script>
+		<script type="text/javascript" src="vendor.bundle.js"></script>
 		<link rel="icon" href="icon32.png" style="display: none;" />
 	</head>
 	<body>
